Minor best practices changes